--- a/gn/BUILDCONFIG.gn
+++ b/gn/BUILDCONFIG.gn
@@ -125,44 +125,6 @@ if (is_android) {
   }
 }
 
-if (target_os == "win") {
-  # By default we look for 2017 (Enterprise, Pro, and Community), then 2015. If MSVC is installed in a
-  # non-default location, you can set win_vc to inform us where it is.
-
-  if (win_vc == "") {
-    win_vc = exec_script("//gn/find_msvc.py", [], "trim string")
-  }
-  assert(win_vc != "")  # Could not find VC installation. Set win_vc to your VC
-                        # directory.
-}
-
-if (target_os == "win") {
-  if (win_toolchain_version == "") {
-    win_toolchain_version = exec_script("//gn/highest_version_dir.py",
-                                        [
-                                          "$win_vc/Tools/MSVC",
-                                          "[0-9]{2}\.[0-9]{2}\.[0-9]{5}",
-                                        ],
-                                        "trim string")
-  }
-  if (win_sdk_version == "") {
-    win_sdk_version = exec_script("//gn/highest_version_dir.py",
-                                  [
-                                    "$win_sdk/Include",
-                                    "[0-9]{2}\.[0-9]\.[0-9]{5}\.[0-9]",
-                                  ],
-                                  "trim string")
-  }
-  if (clang_win != "" && clang_win_version == "") {
-    clang_win_version = exec_script("//gn/highest_version_dir.py",
-                                    [
-                                      "$clang_win/lib/clang",
-                                      "[0-9]+\.[0-9]+\.[0-9]+",
-                                    ],
-                                    "trim string")
-  }
-}
-
 # A component is either a static or a shared library.
 template("component") {
   _component_mode = "static_library"
@@ -231,9 +193,9 @@ if (!is_official_build) {
 
 if (is_win) {
   # Windows tool chain
-  set_default_toolchain("//gn/toolchain:msvc")
-  default_toolchain_name = "msvc"
-  host_toolchain = "msvc_host"
+  set_default_toolchain("//gn/toolchain")
+  default_toolchain_name = "linux_mingw_x64"
+  host_toolchain = "linux_mingw_x64_host"
 } else if (is_wasm) {
   set_default_toolchain("//gn/toolchain:wasm")
   default_toolchain_name = "wasm"
