--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,8 @@
 name: Cross-compile Skia (Linux & Windows x64)
 
 on:
-  workflow_dispatch:
+  push:
+    branches: [ main ]
 
 env:
   GN_ARGS_LINUX: |-
