--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,12 +68,14 @@ env:
     skia_use_wuffs=false
     skia_enable_vulkan_debug_layers=false
     skia_use_spirv_validation=false
-    extra_cflags=["-O3","-DSK_DISABLE_LEGACY_PNG_WRITEBUFFER"]
     # ===== 下面 4 行让 GN 正确找到 MinGW 交叉工具链 =====
     ar="x86_64-w64-mingw32-ar"
     cc="x86_64-w64-mingw32-gcc"
     cxx="x86_64-w64-mingw32-g++"
     rc="x86_64-w64-mingw32-windres"
+    extra_cflags=["-O3","-DSK_DISABLE_LEGACY_PNG_WRITEBUFFER","-I/usr/x86_64-w64-mingw32/include"]
+    extra_ldflags=["-L/usr/x86_64-w64-mingw32/lib"]
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -132,6 +134,17 @@ jobs:
               gcc-mingw-w64-x86-64 \
               g++-mingw-w64-x86-64 \
               binutils-mingw-w64-x86-64
+          
+          sudo apt install -y \
+            zlib1g-dev-mingw-w64 \
+            libpng-dev-mingw-w64 \
+            libjpeg-turbo8-dev-mingw-w64 \
+            libwebp-dev-mingw-w64 \
+            libexpat1-dev-mingw-w64 \
+            freetype-dev-mingw-w64 \
+            harfbuzz-dev-mingw-w64 \
+            bzip2-dev-mingw-w64 \
+            libgif-dev-mingw-w64
           git clone https://chromium.googlesource.com/chromium/tools/depot_tools.git  --depth 1 $HOME/depot_tools
           echo "$HOME/depot_tools" >> $GITHUB_PATH
 
